--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/views/view-section-navigation.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/views/view-section-navigation.html
@@ -1,4 +1,4 @@
-<sly data-sly-use.data="../data/view-section-navigation-data.js">
+<sly data-sly-use.data="${'../data/view-section-navigation-data.js' @testdata=properties.testdata}">
     <!--/* List Links */-->
     <nav class="eaton-link-list-section-navigation">
       <div class="container">
