--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-category-hero.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-category-hero.html
@@ -13,7 +13,7 @@
                     </div>
                     <div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-2 text-left">
                         <div class="category-hero__header-title">
-                            <sly data-sly-resource="${'category-hero-title1' @ resourceType='/apps/eaton/static-components/general/title'}"></sly>
+                            <h2 class="eaton-title__headline">${ data.title }</h2>
                         </div>
                         <div class="category-hero-bottomline"></div>
                     </div>
