Mega Menu - Links (Flexible columns) - Markup, Data, Initial Styles

--- a/eaton.frontend/src/components/list/css/list.scss
+++ b/eaton.frontend/src/components/list/css/list.scss
@@ -5,3 +5,4 @@
 @import 'views/view-default';
 @import 'views/view-featured-article';
 @import 'views/view-article-list-single-feature';
+@import 'views/view-links';
