--- a/eaton.frontend/src/components/search-box/css/views/_view-secondary-search-box.scss
+++ b/eaton.frontend/src/components/search-box/css/views/_view-secondary-search-box.scss
@@ -19,7 +19,7 @@
 
   &__button-transparent {
     background: none;
-    border: none;
+    border: 0;
     color: $color__white;
     font-size: 2rem;
     padding: 0 0 0 30px;
