--- a/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-category-hero.scss
+++ b/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-category-hero.scss
@@ -48,7 +48,7 @@
 
   &-bottomline {
     background-color: $color__white;
-    height:.3em;
+    height: 0.3em;
     width: 4em;
   }
 }
@@ -106,5 +106,5 @@
     &__header-image {
       min-height: 385px;
     }
-  }  
+  }
 }
