--- a/eaton.frontend/src/global/css/etn-global.scss
+++ b/eaton.frontend/src/global/css/etn-global.scss
@@ -1,6 +1,6 @@
-
+//-----------------------------------
 // Import Global Project Files
-//--------------
+//-----------------------------------
 
 // All SASS config files (Variables, Mixins, Functions, etc...)
 @import "_config/sass";
