--- a/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-featured-list.scss
+++ b/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-featured-list.scss
@@ -7,6 +7,7 @@
   &__eyebrow {
     margin-bottom: $spacing__sm;
     text-transform: uppercase;
+
     .dark-theme & {
       color: $color__white;
     }
@@ -22,9 +23,11 @@
     cursor: pointer;
     display: flex;
 
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
       text-decoration: none;
     }
+
     .dark-theme & {
       color: $color__white;
     }
@@ -36,6 +39,7 @@
 
   &__body {
     padding-left: 20px;
+
     .dark-theme & {
       color: $color__white;
     }
