--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
@@ -56,7 +56,7 @@
 @media screen and (max-width: 767px) { .featured-story-component__blue { position: relative; }
   .featured-story-component__row { padding-bottom: 20px; } }
 
-@media screen and (min-width: 768px) and (max-width: 991px) { .featured-story-component__text { padding-top: 15px; font-size: 1.60em; } }
+@media screen and (min-width: 768px) and (max-width: 991px) { .featured-story-component__text { padding-top: 15px; font-size: 1.6em; } }
 
 .tile-link-component__copy { padding: 60px 0; }
 
@@ -121,7 +121,7 @@
 
 .category-hero__header-title h2 { font-size: 3.5em; margin-top: 30px; margin-bottom: 30px; }
 
-.category-hero-bottomline { background-color: #FFF; height: .3em; width: 4em; }
+.category-hero-bottomline { background-color: #FFF; height: 0.3em; width: 4em; }
 
 @media only screen and (max-width: 480px) { .category-hero__header-image { height: 430px; }
   .category-hero__header-content { top: 15%; }
