Disable JS to initialize on Author Mode + Minor Style updates - Link lists

--- a/eaton.frontend/src/components/list/css/views/_view-links.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-links.scss
@@ -50,15 +50,11 @@
     flex-wrap: nowrap;
 
     &__col {
-      flex-basis: 25%;
+      width: 100%;
       margin: 0 ($spacing__sm / 2 );
 
       &:first-child {
         margin-left: 0;
-      }
-
-      &:last-child {
-        border-right: 1px solid $color__secondary-gray1;
       }
     }
   }
