--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
@@ -83,6 +83,5 @@
   .eaton-list-links__col:last-child { margin-bottom: 0; } }
 
 @media screen and (min-width: 992px) { .eaton-list-links { -ms-flex-wrap: nowrap; flex-wrap: nowrap; }
-  .eaton-list-links__col { -ms-flex-preferred-size: 25%; flex-basis: 25%; margin: 0 15px; }
-  .eaton-list-links__col:first-child { margin-left: 0; }
-  .eaton-list-links__col:last-child { border-right: 1px solid #CCD2D7; } }
+  .eaton-list-links__col { width: 100%; margin: 0 15px; }
+  .eaton-list-links__col:first-child { margin-left: 0; } }
