--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/views/view-feature-block.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/views/view-feature-block.html
@@ -4,7 +4,7 @@
             <div class="feature-block-component__text">
                 <h2>${data.title}</h2>
                 <p class="feature-block-component__description">${data.text}</p>
-                <a class="b-button b-button--white feature-block-component__cta" href="${data.cta.url}" role="button" data-sly-test="${data.cta.url.length > 0}">${data.cta.text}</a>
+                <a class="b-button b-button__primary b-button__primary--dark feature-block-component__cta" href="${data.cta.url}" role="button" data-sly-test="${data.cta.url.length > 0}">${data.cta.text}</a>
             </div>
         </div>
         <div class="col-xs-12 col-sm-5 feature-block-component__image"
