--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-landing-hero.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-landing-hero.html
@@ -16,7 +16,7 @@
                 <div class="carousel-component-slide__caption carousel-caption">
                     <h2 class="carousel-component-slide__title">${slide.title}</h2>
                     <p class="carousel-component-slide__text">${slide.text}</p>
-                    <a class="carousel-component-slide__cta b-button b-button--white" href="${slide.cta.url}" role="button" data-sly-test="${slide.cta.text.length > 0}">${slide.cta.text}</a>
+                    <a class="carousel-component-slide__cta b-button b-button__primary b-button__primary--dark" href="${slide.cta.url}" role="button" data-sly-test="${slide.cta.text.length > 0}">${slide.cta.text}</a>
                 </div>
             </div>
             <!-- Controls -->
@@ -41,7 +41,7 @@
                         <h2 class="landing-hero-single__title">${slide.title}</h2>
                         <div class="carousel-component-slide__separator" data-sly-test="${properties.showSeparator}"></div>
                         <p class="carousel-component-slide__text">${slide.text}</p>
-                        <a class="carousel-component-slide__cta b-button b-button--white" href="${slide.cta.url}" role="button" data-sly-test="${properties.showCta}">${slide.cta.text}</a>
+                        <a class="carousel-component-slide__cta b-button b-button__primary b-button__primary--dark" href="${slide.cta.url}" role="button" data-sly-test="${properties.showCta}">${slide.cta.text}</a>
                     </div>
                 </div>
             </div>
