EATON-199: fixed styles for search box mobile // bugfixes

--- a/eaton.frontend/src/components/featured-topic/css/featured-topic.scss
+++ b/eaton.frontend/src/components/featured-topic/css/featured-topic.scss
@@ -12,7 +12,8 @@
     display: none;
   }
 
-  .eaton-link-list-vertical__list-link {
+  .eaton-link-list-vertical__list-link,
+  .eaton-link-list-vertical__eyebrow {
     font-weight: bold;
   }
 
