--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/featured-topic/css/featured-topic.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/featured-topic/css/featured-topic.css
@@ -2,7 +2,7 @@
 
 .eaton-featured-topic .glyphicon { display: none; }
 
-.eaton-featured-topic .eaton-link-list-vertical__list-link { font-weight: bold; }
+.eaton-featured-topic .eaton-link-list-vertical__list-link, .eaton-featured-topic .eaton-link-list-vertical__eyebrow { font-weight: bold; }
 
 .eaton-featured-topic__text { margin-bottom: 60px; }
 
