--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-box/css/search-box.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-box/css/search-box.css
@@ -12,23 +12,25 @@
 
 .eaton-search-box { background-color: #005EB8; padding: 30px; }
 
+.eaton-search-box .row { padding: 0 15px; }
+
 .eaton-search-box__form { position: relative; }
 
 .eaton-search-box__buttons-container { height: 30px; position: absolute; right: 0; top: 5px; }
 
-.eaton-search-box__button-transparent { background: none; border: 0; color: #FFF; font-size: 2rem; padding: 0 0 0 30px; position: relative; }
+.eaton-search-box__button-transparent { background: none; border: 0; color: #FFF; font-size: 2rem; margin-left: 30px; padding-left: 30px; padding: 0 5px; position: relative; }
 
 .eaton-search-box__button-transparent:first-child::after { content: ''; background-color: #FFF; position: absolute; height: 20px; width: 1px; right: -19px; top: 3px; }
 
 .eaton-search-box__results-container { display: none; padding: 50px 0 20px; }
 
-.eaton-search-box__result-list { list-style: none; color: white; padding: 0; }
+.eaton-search-box__result-list { list-style: none; color: #FFF; padding: 0; }
 
 .eaton-search-box__result-item { font-size: 1.9rem; padding: 3px 0; }
 
 .eaton-search-box__result-item a { color: #FFF; }
 
-.eaton-search-box__input { background: transparent; border: 0; border-bottom: 1px solid #FFF; color: white; display: block; font-size: 2.5rem; font-weight: bold; outline: none; width: 100%; }
+.eaton-search-box__input { background: transparent; border: 0; border-bottom: 1px solid #FFF; color: #FFF; display: block; font-size: 2.5rem; font-weight: bold; outline: none; width: 100%; }
 
 .eaton-search-box__input::-webkit-input-placeholder { color: #FFF; }
 
@@ -36,7 +38,13 @@
 
 .eaton-search-box__input::placeholder { color: #FFF; }
 
-.eaton-search-box__input:valid + .eaton-search-box__results-container { display: block; }
+.eaton-search-box__input:focus::-webkit-input-placeholder { color: transparent; }
+
+.eaton-search-box__input:focus:-ms-input-placeholder { color: transparent; }
+
+.eaton-search-box__input:focus::placeholder { color: transparent; }
+
+.eaton-search-box__input:valid + label + .eaton-search-box__results-container { display: block; }
 
 .eaton-search-box__input:valid::-webkit-input-placeholder { color: transparent; }
 
@@ -44,4 +52,16 @@
 
 .eaton-search-box__input:valid::placeholder { color: transparent; }
 
-@media screen and (max-width: 991px) { .eaton-search-box__results-container { padding: 0; } }
+.eaton-search-box__label-mobile { display: none; }
+
+@media screen and (max-width: 991px) { .eaton-search-box { padding: 30px 15px; }
+  .eaton-search-box .row { padding: 0; }
+  .eaton-search-box__results-container { padding: 0; }
+  .eaton-search-box__button-transparent { font-size: 1.5rem; }
+  .eaton-search-box__label-mobile { color: #FFF; font-size: 1.5rem; padding-right: 88px; position: absolute; top: -9px; }
+  .eaton-search-box__input { font-size: 1.8rem; height: 38px; padding-right: 88px; position: relative; z-index: 1; }
+  .eaton-search-box__input:placeholder-shown + label { display: block; }
+  .eaton-search-box__input:focus + label { display: none; }
+  .eaton-search-box__input::-webkit-input-placeholder { color: transparent; }
+  .eaton-search-box__input:-ms-input-placeholder { color: transparent; }
+  .eaton-search-box__input::placeholder { color: transparent; } }
