--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
@@ -1,4 +1,7 @@
-@media screen and (max-width: 991px) { .mega-menu .eaton-link-list-vertical__eyebrow { margin-bottom: 15px; } }
+.mega-menu .eaton-title__headline { font-size: 26px; line-height: 34px; }
+
+@media screen and (max-width: 991px) { .mega-menu .eaton-link-list-vertical__eyebrow { margin-bottom: 15px; }
+  .mega-menu .eaton-title__headline { font-size: 16px; line-height: 20px; } }
 
 .mega-menu { background: #333F48; position: absolute; width: 100%; z-index: 2; }
 
