--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-article-list-single-feature.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-article-list-single-feature.html
@@ -1,9 +1,9 @@
-    <div class="article-list-single-feature container" data-sly-use.data="../data/view-article-list-single-data.js">
+<div class="article-list-single-feature container" data-sly-use.data="../data/view-article-list-single-data.js">
     <div class="row article-list-single-feature__container">
         <div class="col-xs-12 col-md-6 article-list-single-feature__single">
-            <a href="${data.single_feature_card.cta.url}" class="article-list-single-feature__link equal-height-row tablet-card">
+            <a href="${data.single_feature_card.cta.url}" target="${data.single_feature_card.cta.target}" class="article-list-single-feature__link equal-height-row tablet-card">
                 <div class="related-category--tablet-left">
-                    <img src="${data.single_feature_card.image}" class="img-responsive category__image" alt="${data.single_feature_card.alt}"/>
+                    <img src="${data.single_feature_card.image}" class="img-responsive category__image" alt="${data.single_feature_card.image_alt}"/>
                 </div>
                 <div class="category__item--border category__item-innerpadding related-category--tablet-right">
                     <p class="related-category__title--font category__title--bottompadding">${data.single_feature_card.title}</p>
@@ -13,7 +13,7 @@
             </a>
         </div>
         <div class="col-xs-12 col-md-6 article-list-single-feature__article" data-sly-list.card="${data.cards}">
-            <a href="${data.single_feature_card.cta.url}" class="article-list-single-feature__link">
+            <a href="${data.single_feature_card.cta.url}" target="${data.single_feature_card.cta.target}" class="article-list-single-feature__link">
                 <span class="article-list-single-feature--border"></span>
                 <div class="article-list-single-feature__article--copy">
                     <p class="related-category__title--font category__title--bottompadding">${card.title}</p>
