--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-featured-article.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-featured-article.html
@@ -7,13 +7,13 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="featured-category-container">
-                    <a href="${data.featured_content.link_url}" target="${data.featured_content._target}">
-                        <img src="${data.featured_content.image}" class="hidden-xs img-responsive category__image" alt="${data.featured_content.image_alt}"/>
-                        <img src="${data.featured_content.mobile_image}" class="visible-xs img-responsive category__image" alt="${data.featured_content.image_alt}"/> 
+                    <a href="${data.single_feature_card.cta.url}" target="${data.single_feature_card.cta.target}">
+                        <img src="${data.single_feature_card.image}" class="hidden-xs img-responsive category__image" alt="${data.single_feature_card.image_alt}"/>
+                        <img src="${data.single_feature_card.mobile_image}" class="visible-xs img-responsive category__image" alt="${data.single_feature_card.image_alt}"/> 
                         <div class="featured-category--topbottompadding">
-                            <div class="category__title--font category__title--bottompadding">${data.featured_content.title}</div>
-                            <div class="category__link--font">${data.featured_content.link_text}</div>
-                            <div class="category-item-date"><em>${data.featured_content.date_text}</em></div>
+                            <div class="category__title--font category__title--bottompadding">${data.single_feature_card.title}</div>
+                            <div class="category__link--font">${data.single_feature_card.text}</div>
+                            <div class="category-item-date"><em>${data.single_feature_card.date_text}</em></div>
                         </div>                    
                     </a>
                 </div>
@@ -24,13 +24,13 @@
         <div class="row hidden-xs visible-sm visible-md visible-lg">
             <div data-sly-list.slider="${data.cards}" role="listbox">
                 <div class="col-sm-12 ${data.cards.length == 2 ? 'col-md-6' : 'col-md-4'}">
-                    <a href="${slider.link_url}" class="equal-height-row tablet-card" target="${slider._target}">
+                    <a href="${slider.cta.url}" class="equal-height-row tablet-card" target="${slider.cta.target}">
                         <div class="related-category--tablet-left">
                             <img src="${slider.image}" class="img-responsive category__image" alt="${slider.image_alt}"/>
                         </div>
                         <div class="category__item--border category__item-innerpadding related-category--tablet-right category__item">
                             <div class="related-category__title--font category__title--bottompadding">${slider.title}</div>
-                            <div class="category__link--font">${slider.link_text}</div>
+                            <div class="category__link--font">${slider.text}</div>
                             <p class="category-item-date"><em>${slider.date_text}</em></p>
                         </div>
                     </a>
@@ -43,12 +43,12 @@
             <div class="col-xs-12">
                 <div class="featured-article-carousel-component carousel slide">
                     <div class="carousel-inner" data-sly-list.slider="${data.cards}" role="listbox">
-                        <a href="${slider.link_url}" class="item ${sliderList.index == 0 ? 'active' : ''}" target="${slider._target}">
+                        <a href="${slider.cta.url}" class="item ${sliderList.index == 0 ? 'active' : ''}" target="${slider.cta.target}">
                             <div>
                                 <img src="${slider.mobile_image}" class="img-responsive category__image" alt="${slider.image_alt}"/>
                                 <div class="category__item--border category__item-innerpadding carousel__item">
                                     <div class="related-category__title--font category__title--bottompadding">${slider.title}</div>
-                                    <h5 class="category__link--font">${slider.link_text}</h5>
+                                    <h5 class="category__link--font">${slider.text}</h5>
                                     <p class="category-item-date"><em>${slider.date_text}</em></p>
                                 </div>
                             </div>
@@ -56,7 +56,7 @@
                     </div>
                     <div class="text-center">
                         <ol class="carousel-indicators list-unstyled" data-sly-list.slider1="${data.cards}">
-                            <li data-target=".featured-article-carousel-component${data.carouselClassUnique}" data-slide-to="${slider1List.index}" class="${slider1List.index == 0 ? 'active' : ''}">
+                            <li data-target=".featured-article-carousel-component" data-slide-to="${slider1List.index}" class="${slider1List.index == 0 ? 'active' : ''}">
                                 <span class="sr-only">${slider1List.index}</span>
                             </li>
                         </ol>
