Header font-sizes (Utility Navigation)

--- a/eaton.frontend/src/components/header/css/_header-utility-nav.scss
+++ b/eaton.frontend/src/components/header/css/_header-utility-nav.scss
@@ -5,6 +5,7 @@
 .header-utility-nav {
   background: $color__primary-blue;
   padding: 10px 0;
+  font-size: 14px;
 
   &__country {
     text-transform: uppercase;
