--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
@@ -1,10 +1,8 @@
-.eaton-landing-hero .item img { width: 100%; }
-
 .carousel-component-slide:hover > .carousel-component__arrow { display: block; border: 0; background-image: none; }
 
-.carousel-component-slide__caption { top: 10%; }
+.carousel-component-slide__caption { top: 0; }
 
-.carousel-component-slide__cta { margin-top: 60px; }
+.carousel-component-slide__cta { margin-top: 30px; }
 
 .carousel-component-slide__image { width: 100%; }
 
@@ -18,8 +16,12 @@
 
 .carousel-component__arrow { display: none; }
 
-@media screen and (max-width: 991px) { .carousel-component-slide__caption { top: 0; }
-  .carousel-indicators { bottom: 56px; } }
+.carousel-component .carousel-indicators { bottom: 56px; }
+
+@media screen and (max-width: 767px) { .carousel-component-slide__image--mobile { min-height: 750px; } }
+
+@media screen and (min-width: 1200px) { .carousel-component-slide__caption { top: 10%; }
+  .carousel-component-slide__cta { margin-top: 60px; } }
 
 .eaton-landing-hero--single .carousel-component-slide__caption { position: absolute; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); bottom: auto; }
 
