Added testdata for mega menu

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-featured-article.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-featured-article.html
@@ -1,4 +1,4 @@
-<sly data-sly-use.data="../data/view-featured-article-data.js">
+<sly data-sly-use.data="${'../data/view-featured-article-data.js' @testdata=properties.testdata}">
 
     <!--/* Container */-->
     <div class="container eaton-list-component eaton-list-component-featured-article-view">
