--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-box/views/view-inline.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-box/views/view-inline.html
@@ -1,4 +1,4 @@
-<sly data-sly-use.data="../data/view-inline-data.js">
+<sly data-sly-use.data="${'../data/view-inline-data.js' @testdata=properties.testdata}">
   <div class="eaton-search-inline">
     <!--/* If Headline */-->
     <p class="eaton-search-inline__headline b-eyebrow-small">${data.headline}</p>
