--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/views/view-single-feature.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/views/view-single-feature.html
@@ -1,18 +1,18 @@
-<sly data-sly-use.data="../data/view-single-feature-data.js">
+<sly data-sly-use.data="${'../data/view-single-feature-data.js' @testdata=properties.testdata}">
     <div class="eaton-single-feature">
-      <p class="eaton-single-feature__headline b-eyebrow-small">${data.headline}</p>
+      <p class="eaton-single-feature__headline b-eyebrow-small">${data.title}</p>
       <div class="eaton-single-feature__image">
-        <img class="img-responsive" src="${data.image}" alt=${data.headline} />
+        <img class="img-responsive" src="${data.imgSrc}" alt=${data.title} />
       </div>
       <div class="eaton-single-feature__content">
           <!--/* Eyebrow */-->
-          <div class="eaton-single-feature__eyebrow b-eyebrow-small">${ data.eyebrow }</div>
+          <div class="eaton-single-feature__eyebrow b-eyebrow-small">${ data.text }</div>
 
           <!--/* List Links */-->
-          <ul data-sly-list="${ data.links }" class="eaton-single-feature__links">
+          <ul data-sly-list="${ data.cta }" class="eaton-single-feature__links">
             <li>
-              <a href="${ item.url }" class="eaton-single-feature__item" aria-label="Go to ${ item.title }" target="${ item.target }">
-                <span>${ item.title }</span>
+              <a href="${ item.url }" class="eaton-single-feature__item" aria-label="Go to ${ item.text }" target="${ item.target }">
+                <span>${ item.text }</span>
                 <i class="glyphicon glyphicon-menu-right" aria-hidden="true"></i>
               </a>
             </li>
