[styleguide] Adding EATON-Glyphicon font

--- a/eaton.frontend/src/global/css/_config/_sass.scss
+++ b/eaton.frontend/src/global/css/_config/_sass.scss
@@ -2,3 +2,7 @@
 @import 'variables/**/*.scss';
 @import 'mixins/**/*.scss';
 @import 'placeholders/**/*.scss';
+
+// Import Glyphicon Placeholders Created By Gulp
+// TODO: Tweak Gulp to create placeholder file into this folder not "/base/" folder
+@import '../base/eaton-glyphicon-placeholders';
