--- a/eaton.frontend/src/global/css/etn-global.scss
+++ b/eaton.frontend/src/global/css/etn-global.scss
@@ -9,6 +9,7 @@
 // Import Base Styles in specific order
 // NOTE: Bootstrap 3 provides a 'normalize/reset' module.
 @import "base/fonts";
+@import "base/eaton-glyphicon-font";
 @import "base/typography";
 
 
