EATON-200: fixed styles in richtexts areas in footer

--- a/eaton.frontend/src/components/footer/css/footer.scss
+++ b/eaton.frontend/src/components/footer/css/footer.scss
@@ -19,6 +19,12 @@
 
   .eaton-text-default__content {
     @extend %body-copy-small;
+
+    // override the default font size for /text component
+    p {
+      font-size: 1.7rem;
+      line-height: 2.8rem;
+    }
   }
 
   .eaton-footer-top__link-list {
