--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/footer/css/footer.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/footer/css/footer.css
@@ -8,6 +8,8 @@
 
 .eaton-footer-top { background: #5B6770; padding: 60px 0; }
 
+.eaton-footer-top .eaton-text-default__content p { font-size: 1.7rem; line-height: 2.8rem; }
+
 .eaton-footer-top .eaton-footer-top__link-list { margin-bottom: 40px; }
 
 .eaton-footer-bottom { background: #333F48; }
