--- a/eaton.frontend/src/components/link-list/css/views/_view-vertical.scss
+++ b/eaton.frontend/src/components/link-list/css/views/_view-vertical.scss
@@ -35,7 +35,7 @@
   &__download-text {
     width: 100%;
     margin-left: 30px;
-    font-size: .90em;
+    font-size: 0.9em;
 
     &--description {
       color: $color__primary-gray3;
