--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/link-list/css/link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/link-list/css/link-list.css
@@ -8,7 +8,7 @@
 
 .eaton-link-list-vertical__external-icon { padding-right: 10px; font-size: 1.125em; }
 
-.eaton-link-list-vertical__download-text { width: 100%; margin-left: 30px; font-size: .90em; }
+.eaton-link-list-vertical__download-text { width: 100%; margin-left: 30px; font-size: 0.9em; }
 
 .eaton-link-list-vertical__download-text--description { color: #98A4AE; font-family: Arial, "Arial", sans-serif; }
 
