--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -118,7 +118,7 @@ h5, .b-heading-h5 { font-family: Arial, sans-serif; font-size: 20px; font-weight
 
 @font-face { font-family: 'Arial'; src: url("fonts/Arial.woff"); }
 
-@font-face { font-family: "eaton-glyphicon"; font-style: normal; font-weight: normal; src: url("../fonts/eaton-glyphicon.eot"); src: url("../fonts/eaton-glyphicon.eot?#iefix") format("eot"), url("../fonts/eaton-glyphicon.woff") format("woff"), url("../fonts/eaton-glyphicon.ttf") format("truetype"); }
+@font-face { font-family: "eaton-glyphicon"; font-style: normal; font-weight: normal; src: url("../css/fontseaton-glyphicon.eot"); src: url("../css/fontseaton-glyphicon.eot?#iefix") format("eot"), url("../css/fontseaton-glyphicon.woff") format("woff"), url("../css/fontseaton-glyphicon.ttf") format("truetype"); }
 
 .icon { font-size: 24px; line-height: 0; }
 
